Extract API submodule